# tender-checker

./: .gitignore  README.md  build-windows.ps1  build.bat  index.html  package-lock.json  package.json  run-build.bat  vite.config.js
.github/workflows/: build.yml
docs/: SECURITY.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_config.rs  check.rs  custom_rules.rs  debug.rs  desensitize.rs  export.rs  file.rs  history.rs  mod.rs  security.rs  tender_parse.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: check_result.rs  mod.rs  project.rs
src-tauri/src/security/: audit.rs  device.rs  license.rs  log_sanitizer.rs  mod.rs  rate_limiter.rs  secure_storage.rs
src-tauri/src/services/: cache.rs  llm_client.rs  logger.rs  mod.rs  multi_llm.rs
src/components/: LicenseManager.vue
src/router/: index.js
src/stores/: index.js  settings.js
src/styles/: main.css
src/views/: Checking.vue  History.vue  Home.vue  Result.vue  Settings.vue  TenderExtract.vue
tests/reports/: test_report_20260315.json  test_report_20260315.md
tests/reports/bug_hunter_20260315_225607/: bugs.json
tools/: license-generator.js
