[package]
name = "tender-checker"
version = "1.0.0"
description = "Windows标书智能检查工具 - 基于AI的标书合规性自动化检查系统"
authors = ["JARVIS AI Assistant", "小王"]
license = "MIT"
repository = "https://github.com/your-repo/tender-checker"
keywords = ["tender", "bid", "checking", "ai", "llm"]
categories = ["development-tools", "text-processing"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
quick-xml = "0.31"
calamine = "0.22"
pdf-extract = "0.7"
encoding_rs = "0.8"
hostname = "0.4"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
